Fix Issue #16: Dashboard labels are not visible. Simplify some code encountered on the way.

--- a/src/main/resources/scalafx/ensemble/css/ensemble.css
+++ b/src/main/resources/scalafx/ensemble/css/ensemble.css
@@ -1,4 +1,31 @@
 /*
+ * Copyright (c) 2012-2013, ScalaFX Ensemble Project
+ * All rights reserved.
+ *
+ * Redistribution and use in source and binary forms, with or without
+ * modification, are permitted provided that the following conditions are met:
+ *     * Redistributions of source code must retain the above copyright
+ *       notice, this list of conditions and the following disclaimer.
+ *     * Redistributions in binary form must reproduce the above copyright
+ *       notice, this list of conditions and the following disclaimer in the
+ *       documentation and/or other materials provided with the distribution.
+ *     * Neither the name of the ScalaFX Project nor the
+ *       names of its contributors may be used to endorse or promote products
+ *       derived from this software without specific prior written permission.
+ *
+ * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+ * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+ * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+ * DISCLAIMED. IN NO EVENT SHALL THE SCALAFX PROJECT OR ITS CONTRIBUTORS BE LIABLE
+ * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
+ * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+ * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED
+ * AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+ * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+ * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ */
+
+/*
  * Copyright (c) 2012, ScalaFX Ensemble Project
  * All rights reserved.
  *
@@ -510,6 +537,11 @@
 	-fx-text-fill: linear-gradient(white, #acacac);
 }
 
+.category-header .text {
+    /* -fx-effect: dropshadow( three-pass-box , black , 0, 0.0 , 0 , 1 ); */
+    -fx-effect: innershadow(three-pass-box, rgba(255, 255, 255, 0.7), 0, 0.0, 0, -1);
+}
+
 .category-page-flow {
 	-fx-padding: 3px 0 8px 0;
 }
@@ -521,11 +553,13 @@
 	-fx-graphic-vpos: top;
 	-fx-alignment: center;
 	-fx-padding: 4px 4px 3px 4px;
+    -fx-font-size: 14px;
 }
 
-.sample-tile Text {
-	-fx-text-fill: #0072aa;
-	-fx-font-smoothing-type: lcd;
+.sample-tile .text {
+    /*-fx-text-fill: #0072aa;*/
+    -fx-font-weight: normal;
+    -fx-font-smoothing-type: lcd;
 }
 
 .sample-tile:hover {
@@ -536,9 +570,9 @@
 }
 
 .sample-tile:focused {
-	-fx-effect: dropshadow(three-pass-box, derive(-fx-focus-color, 20%), 12,
-		0.6, 0, 0 );
+    -fx-effect: dropshadow(three-pass-box, derive(-fx-focus-color, 20%), 12, 0.6, 0, 0);
 }
+
 /* Sample Page Styles */
 .sample-page {
 	-fx-background-color: #EEEEEE;
